[package]
name = "ramflux-transport"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "Apache-2.0"
repository = "https://github.com/ramflux/ramflux-transport"

[features]
default = []
compio-gateway = [
    "dep:compio",
    "dep:compio-buf",
    "dep:compio-io",
    "dep:compio-quic",
    "dep:compio-tls",
]
compio-mesh = [
    "dep:compio",
    "dep:compio-buf",
    "dep:compio-io",
    "dep:compio-quic",
    "dep:compio-tls",
]

[target.'cfg(target_os = "linux")'.dependencies]
compio = { version = "=0.19.1", optional = true }
compio-buf = { version = "=0.8.3", optional = true }
compio-io = { version = "=0.10.1", optional = true }
compio-quic = { version = "=0.8.0", optional = true }
compio-tls = { version = "=0.10.0", default-features = false, features = ["ring"], optional = true }

[dependencies]
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-core = { version = "0.1.0", path = "../ramflux-core" }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-protocol = { version = "0.1.0", path = "../ramflux-protocol" }
anyhow = "1.0"
bytes = "1.10"
h2 = "0.4"
http = "1.3"
hyper = "1.10.1"
quinn = "0.11.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1.14"
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["io-util", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false }
tokio-util = "0.7"
tracing = "0.1"
x509-parser = "0.17"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints.rust]
warnings = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"

[package.metadata.cargo-machete]
ignored = ["anyhow", "compio-io", "compio-tls", "hyper", "rustls-pki-types", "tokio-util"]
